crates/solidity-v2/testing/snapshots/cst_output/BreakStatement/error_recovery/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of Semicolon was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/BreakStatement/error_recovery/input.sol:4:7 ]
   │
 4 │ break invalid ;
   │       ───┬───  
   │          ╰───── Error occurred here.
───╯
